<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgColor"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >
    
<!--     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" > -->

        <!-- Password Label -->


        <!-- Login button -->

        <TextView
            android:id="@+id/userName"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/password"
            android:layout_marginTop="20dp"
            android:text="@string/userName"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/logInUserNameInput"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userName"
            android:layout_below="@+id/userName"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />

        </EditText>

        <TextView
            android:id="@+id/password"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logInUserNameInput"
            android:layout_centerHorizontal="true"
            android:text="@string/password"
            android:textColor="#372c24"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/logInPasswordInput"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/logInUserNameInput"
            android:layout_below="@+id/password"
            android:ems="10"
            android:inputType="numberPassword" >
        </EditText>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logInPasswordInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@color/btnColor"
            android:onClick="onLogInClick"
            android:text="@string/btnLogin"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/logInUserNameInput"
            android:layout_alignStart="@+id/logInPasswordInput"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/link_to_register"
            android:textColor="#0b84aa"
            android:textSize="20dip" />

        </RelativeLayout>
    <!-- </LinearLayout> -->

</ScrollView>